// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AxisComponent should not display axis line when axis.line is falsy 1`] = `
<div
  id="root1"
  ngx-d3timeline-axis=""
>
  <g
    class="axis-group Vertical"
  >
    
    
    
    
    <g
      class="grid-line"
      ngx-d3timeline-line=""
    >
      <g />
    </g>
    
    
  </g>
</div>
`;

exports[`AxisComponent should not show gridlines when axis.showGridLines is false 1`] = `
<div
  id="root2"
  ngx-d3timeline-axis=""
>
  <g
    class="axis-group Horizontal"
  >
    
    
    
    <g
      class="axis-line"
      ngx-d3timeline-line=""
    >
      <g />
    </g>
  </g>
</div>
`;

exports[`AxisComponent should render correctly 1`] = `
<div
  id="root0"
  ngx-d3timeline-axis=""
>
  <g
    class="axis-group Vertical"
  >
    
    <g
      ngx-d3timeline-tick-mark=""
    >
      <g
        class="axis-tick-mark"
      />
    </g>
    <g
      ngx-d3timeline-tick-mark=""
    >
      <g
        class="axis-tick-mark"
      />
    </g>
    
    
    
    <g
      class="grid-line"
      ngx-d3timeline-line=""
    >
      <g />
    </g>
    
    
    <g
      class="axis-line"
      ngx-d3timeline-line=""
    >
      <g />
    </g>
  </g>
</div>
`;
